[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/penguin_pix_96px.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/penguin_pix_48px.tres" type="DynamicFont" id=3]

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label_Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.33
anchor_right = 0.5
anchor_bottom = 0.33
margin_left = -189.0
margin_top = -35.0
margin_right = 189.0
margin_bottom = 35.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -17.5
margin_right = 168.0
margin_bottom = 17.5
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "Area filled: 42%
Highscore: 73%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -16.0
margin_right = 640.0
__meta__ = {
"_edit_use_anchors_": false
}
